Fixed an issue with bids not showing on the item#show page and styled the bid form a little differently

--- a/app/assets/stylesheets/auction.css.scss
+++ b/app/assets/stylesheets/auction.css.scss
@@ -422,7 +422,7 @@ div.pagination {
   }
 }
 
-/* FORM ERROR STYLES */
+/* FORM STYLES */
 
 form {
   text-align: center;
@@ -451,6 +451,10 @@ form {
   li {
     margin: 0;
   }
+}
+
+#new_bid {
+  margin: 20px;
 }
 
 /* FOOTER STYLES */
